--- a/templates/Admin/inventory_management.html
+++ b/templates/Admin/inventory_management.html
@@ -4,26 +4,38 @@
 
 {% block content %}
 <nav class="navbar navbar-expand-lg" style="background-color: blue;">
-    <div class="container-fluid">
-      <a class="navbar-brand text-white" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <div class="container-fluid">
+      <a class="navbar-brand text-white" href="{{ url_for('home') }}">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="/profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="/logout">Log Out</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if 'user_id' in session %}
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="{{ url_for('admin_dashboard') }}">Dashboard</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="{{ url_for('profile') }}">Profile</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="{{ url_for('logout') }}">Log Out</a>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="{{ url_for('login') }}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-white" href="{{ url_for('register') }}">Register</a>
+                  </li>
+              {% endif %}
+          </ul>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
+
   
 <div class="container mt-5">
     <h2 class="text-center mb-4"><i class="fas fa-boxes"></i> Inventory Management</h2>
