--- a/templates/Admin/statistics.html
+++ b/templates/Admin/statistics.html
@@ -20,7 +20,7 @@
                       <a class="nav-link text-white" href="{{ url_for('admin_dashboard') }}">Dashboard</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-white" href="{{ url_for('profile') }}">Profile</a>
+                      <a class="nav-link text-white" href="{{ url_for('admin_profile') }}">Profile</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link text-white" href="{{ url_for('logout') }}">Log Out</a>
