--- a/templates/Employee/generate_bill.html
+++ b/templates/Employee/generate_bill.html
@@ -18,7 +18,7 @@
                         <a class="nav-link text-white" href="{{ url_for('generate_bill') }}">Generate Bill</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('profile') }}">Profile</a>
+                        <a class="nav-link text-white" href="{{ url_for('employee_profile') }}">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{{ url_for('logout') }}">Log Out</a>
@@ -33,6 +33,7 @@
     </div>
   </nav>
 
+  
 <div class="container mt-5">
     <h2 class="text-center mb-4">Generate Bill</h2>
 
